Adjust overflow issue with safari ios

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ body {
   color: var(--body-color);
   font-weight: lighter;
   width: 100dvw;
-  overflow-x: hidden;
+  overflow-x: clip;
   height: 100dvh;
   background: var(--body-bgColor);
   border-color: var(--borderColor);
